# dev-hud

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dev-hud.service  justfile  setup.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  demo.rs  events.rs  ipc.rs  loader.rs  main.rs  session.rs  surface.rs  theme.rs  util.rs
src/shell/: config.rs  mod.rs
src/views/: archive.rs  hud.rs  mod.rs  modal.rs
src/watcher/: mod.rs  parser.rs  scanner.rs
