[package]
name = "dev-hud"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dev-hud"
path = "src/main.rs"

[[bin]]
name = "dev-hud-ctl"
path = "src/bin/dev-hud-ctl.rs"

[dependencies]
dirs = "5"
futures = "0.3"
iced = { version = "0.14", features = ["image", "svg"] }
iced_layershell = "0.15"
image = "0.25"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = "0.16"
